<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".MainActivity">

    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idPBLoading"
            android:visibility="visible"
            android:layout_centerInParent="true"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/idRLHome"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/idTVBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/black_shade_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="City name"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:textSize="18sp"
            android:id="@+id/idTVCityName"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/idLLEdt"
            android:layout_below="@id/idTVCityName"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="4.5"
                android:background="@android:color/transparent"
                android:hint="Enter city name"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/idTVSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                app:tint="@color/white"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTemperature"
            android:layout_below="@+id/idLLEdt"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="13"
            android:textColor="@color/white"
            android:textSize="70dp"/>

        <ImageView
            android:id="@+id/idTVIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/idTVTemperature"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVCondition"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="Condition"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:layout_below="@+id/idTVIcon"/>
        <!-- We have undone thing here -->

        <!-- We have to implement the IVCondition in order to intialize in the MainActivity-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:text="Hourly Forecast"
            android:layout_above="@id/idRvWeather"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
    />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/idRvWeather"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:paddingBottom="50dp"
            />

    </RelativeLayout>

</RelativeLayout>